# SP_Rabbit-Simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Report.md  exec  main.cpp  non-reproductibilité.md  simu_res.xlsx
results/: p10_8y_s100.txt  p10_8y_s101.txt  p10_8y_s102.txt  p10_8y_s103.txt  p10_8y_s104.txt  p10_8y_s105.txt  p10_8y_s106.txt  p10_8y_s107.txt  p10_8y_s108.txt  p10_8y_s109.txt  p30_7y_s1000.txt  p30_7y_s1001.txt  p30_7y_s1002.txt  p30_7y_s1003.txt  p30_7y_s1004.txt  p30_7y_s1005.txt  p30_7y_s1006.txt  p30_7y_s1007.txt  p30_7y_s1008.txt  p30_7y_s1009.txt
src/: Constant.h  FemaleRabbit.cpp  FemaleRabbit.h  Generator.cpp  Generator.h  MaleRabbit.cpp  MaleRabbit.h  Rabbit.cpp  Rabbit.h  Simulation.cpp  Simulation.h  Stats.cpp  Stats.h  Util.cpp  Util.h  prog
